editing technical specification

--- a/sbc-template.tex
+++ b/sbc-template.tex
@@ -6,6 +6,7 @@
 \usepackage[brazil]{babel}
 %\usepackage[latin1]{inputenc}  
 \usepackage{xcolor}
+\usepackage{cleveref}
 
 % ADD SUBSUBSUBSECTION
 \newcommand{\subsubsubsection}[1]{\paragraph{#1}\mbox{}\\}
@@ -31,9 +32,9 @@
 \input{abstract}
 
 \input{sections/1_INTRODUCTION.tex}
-\input{sections/2_THEORETICAL_BACKGROUND.tex}  %<< PAREI AQUI
+\input{sections/2_THEORETICAL_BACKGROUND.tex}  
 \input{sections/3_GENERAL_CONTEXT.tex}
-\input{sections/4_TECHNICAL_SPECIFICATION.tex}
+\input{sections/4_TECHNICAL_SPECIFICATION.tex} %<< PAREI AQUI
 \input{sections/5_CONCLUSION.tex}
 
 \bibliographystyle{sbc}
