changing blockchain subsection

--- a/sections/2_THEORETICAL_BACKGROUND.tex
+++ b/sections/2_THEORETICAL_BACKGROUND.tex
@@ -1,5 +1,4 @@
 \section{Theoretical Background} \label{sec:Theoretical}
-
 This section presents the main concepts, which provide subsidies for the proposed project development.
 
 %\subsubsubsection
@@ -22,7 +21,6 @@ For \cite{swan2015blockchain}, besides the currency ( "Blockchain 1.0"), smart c
 Potential benefits of blockchain are more than just economic. They extend to the political, humanitarian, social and scientific domains. Its technological capacity is already being harnessed by specific groups to solve real world problems.
 
 \subsection{Fundamentals of blockchain}\label{sec:fundamentals}
-
 Blockchain technology has key features such as centralization, persistence, anonymity and auditability. Blockchain can function in a decentralized environment that is activated by the integration of several key technologies such as cryptographic hash, digital signature and distributed consensus engine. As a transaction may occur in a decentralized manner, blockchain can greatly save the cost and improve efficiency \cite{zheng2016blockchain}. The main properties of the blockchain are considered innovative and enable rapid adoption for technology \cite{greve2018blockchain}:
 
 \begin{itemize}
@@ -92,6 +90,8 @@ A good consensus algorithm means efficiency, security and convenience. Current c
 \subsubsection{Distributed Ledger}\label{sec:livro}
 Distributed ledger is a data structure distributed by several nodes or computing devices. Each node replicates and saves a identical ledger copy. Each participating node in the network updates independently \cite{greve2018blockchain}.
 
+At the simplest level, a blockchain immutably records transactions which update states in a ledger. A smart contract programmatically accesses two distinct pieces of the ledger – a blockchain, which immutably records the history of all transactions, and a world state that holds a cache of the current value of these states, as it’s the current value of an object that is usually required. Smart contracts primarily put, get and delete states in the world state, and can also query the immutable blockchain record of transactions.
+
 \subsubsubsection{Transactions}\label{sec:transac}
 Blockchain is a public digital book that records online transactions. In it, transactions are recorded in a block without the help of third parties, such as a bank or payment processor. The blockchain algorithm automatically graphs and authenticates the transaction, which is immediately visible to all users, minimizing the possibility of fraud \cite{Bankrate2018}.
 
@@ -110,7 +110,6 @@ Validate a block consists in verifying (i) if its structure is well formed (ii) 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsubsection{Smart Contracts}\label{sec:smartContracts}
-
 Blockchain 2.0 begins with the innovative proposal of smart contracts in 2013, and all range of possible financial applications \cite{greve2018blockchain}. A smart contract is a computerized transaction protocol that executes the terms of a contract \cite{szabo1997idea}. Its model was proposed a long time ago and now this concept can be implemented with blockchain.
 
 The term smart contract (SC) means: “an internal transaction protocol format that executes the terms of a contract. Their overall goals are ensure common contractual conditions, minimize malicious and accidental exceptions and the need for reliable intermediaries. Related economic objectives include reducing fraud losses, arbitration and execution costs, and other transaction costs.” \cite{szabo1997idea}.
